--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <div class="row">
   <div class="col-xs-12  col-sm-12 col-md-12 col-lg-12">
-    <button class="fullwidth button btn-primary center-block">Display Date and Year</button>
+    <button class="fullwidth button btn-primary center-block"
+    (click)="getDateTime()">Display Date and Year</button>
   </div>
   <div class="info center-block">
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 date" id="date">
       <h3>The current date is</h3>
+      <h4>{{date}}</h4>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 year" id="year">
       <h3>The current year is</h3>
+      <h4>{{year}}</h4>
     </div>
   </div>
 </div>
